########### 2015-5-7  #################
ALTER TABLE `shop_weixin_user` ADD INDEX shop_weixin_user_vmobile(vmobile);
########### 2015-5-5  #################
alter table shop_items_productsku add column lock_num int(11) NOT NULL;
alter table flashsale_productdetail add column buy_limit tinyint(1) NOT NULL;
alter table flashsale_productdetail add column per_limit int(11) NOT NULL;
########### 2015-5-4  #################
ALTER TABLE `xiaolumm_xiaolumama` ADD column charge_status varchar(16) NOT NULL,ADD INDEX `xiaolumm_xiaolumama`(`charge_status`);
ALTER TABLE `xiaolumm_xiaolumama` ADD column user_group_id bigint(20) DEFAULT NULL, ADD CONSTRAINT `xiaolumm_user_group_id` FOREIGN KEY (`user_group_id`) REFERENCES `shop_weixin_group` (`id`);
########### 2015-3-31  #################
create index idx_mergetrade_receiver_phone on shop_trades_mergetrade(receiver_phone);
########### 2015-3-23  #################
alter table shop_items_product change retrieval_num sale_num int(11) NOT NULL;
alter table shop_items_productsku change retrieval_num sale_num int(11) NOT NULL;
alter table shop_items_product add column sale_time date,add index item_sale_time_idx(sale_time);
########### 2015-3-16  #################
alter table shop_items_product add column sale_charger varchar(32) NOT NULL, add index (sale_charger);
alter table shop_items_product add column storage_charger varchar(32) NOT NULL, add index (storage_charger);
########### 2015-3-9  #################
alter table shop_weixin_account add js_ticket varchar(256) NOT NULL;
alter table shop_weixin_account add js_expired datetime NOT NULL;
########### 2015-3-5  #################
alter table shop_weixin_sale_linkclicks add link_type varchar(8) NOT NULL;
update shop_weixin_sale_linkclicks set link_type='sample';
alter table shop_weixin_sale_linkclicks drop index shop_weixin_sale_linkclicks_6338e735;
create index shop_weixin_sale_linkclicks_118edc33 on shop_weixin_sale_linkclicks(link_type);